feat(backend/resources): implement full CRUD operations for resources with routes and server integration

--- a/frontEnd/src/locales/en/translation.json
+++ b/frontEnd/src/locales/en/translation.json
@@ -76,7 +76,12 @@
       "activities": "Activities",
       "travel": "Travel options",
       "sightseeing": "Sightseeing"
-    },  
+    }, 
+    "resources":{
+        "hubspotByNumbers": "HubSpot By the Numbers",
+        "learnMore": "Learn more",
+        "loading": "Loading"
+    },     
   "footer": {
     "home": "Home",
     "tours": "Tours",
