--- a/frontEnd/src/locales/ru/translation.json
+++ b/frontEnd/src/locales/ru/translation.json
@@ -75,7 +75,12 @@
         "activities": "Развлечения",
         "travel": "Варианты путешествий",
         "sightseeing": "Достопримечательности"
-      },   
+      }, 
+      "resources":{
+        "hubspotByNumbers": "HubSpot в цифрах",
+        "learnMore": "Узнать больше",
+        "loading": "Загрузка"
+      },        
       "footer": {
       "home": "Главная",
       "tours": "Туры",
